fix: increase white nav z-index

--- a/style.css
+++ b/style.css
@@ -26,6 +26,7 @@ header {
   position: -webkit-sticky;
   position: sticky;
   top: 0;
+  z-index: 1;
 }
 header .white-nav {
   background-color: #FFFFFF;
